// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/history has a default state 1`] = `
Array [
  Object {
    "squares": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
]
`;

exports[`reducers/history reduces SET_HISTORY 1`] = `
Array [
  Object {
    "squares": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
]
`;

exports[`reducers/history reduces SET_HISTORY 2`] = `
Array [
  Object {
    "squares": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      "O",
      null,
      null,
      null,
      null,
      null,
    ],
  },
]
`;

exports[`reducers/history reduces SET_HISTORY 3`] = `
Array [
  Object {
    "squares": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      "O",
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      null,
      "O",
      null,
      null,
      null,
      null,
      null,
    ],
  },
]
`;

exports[`reducers/history reduces SET_HISTORY 4`] = `
Array [
  Object {
    "squares": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      "O",
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      null,
      "O",
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      null,
      "O",
      "O",
      null,
      null,
      null,
      null,
    ],
  },
]
`;

exports[`reducers/history reduces SET_HISTORY 5`] = `
Array [
  Object {
    "squares": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      "O",
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      null,
      "O",
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      null,
      "O",
      "O",
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      "X",
      "O",
      "O",
      null,
      null,
      null,
      null,
    ],
  },
]
`;

exports[`reducers/history reduces SET_HISTORY 6`] = `
Array [
  Object {
    "squares": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      null,
      null,
      "O",
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      null,
      "O",
      null,
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      null,
      "O",
      "O",
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      "X",
      "O",
      "O",
      null,
      null,
      null,
      null,
    ],
  },
  Object {
    "squares": Array [
      "X",
      "X",
      "X",
      "O",
      "O",
      "O",
      null,
      null,
      null,
    ],
  },
]
`;

exports[`reducers/history reduces nothing 1`] = `
Array [
  Object {
    "squares": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
]
`;
